@@ -2,6 +2,9 @@ golang-petname (2.9) unreleased; urgency=medium
 
   * UNRELEASED
 
+  [ Michael Hudson-Doyle ]
+  * Stop building shared library package.
+
  -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 21 Sep 2017 17:06:36 -0500
 
 golang-petname (2.8-0ubuntu1) artful; urgency=medium
